# concert-finder

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  ecosystem.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: test.yml
apps/api/: pyproject.toml
apps/api/src/concert_finder_api/: db.py  main.py
apps/api/src/concert_finder_api/routers/: events.py  user.py
apps/web/: .env.local.example  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/app/api/v1/[...path]/: route.ts
apps/web/src/app/signin/: page.tsx
apps/web/src/components/: EventCard.tsx  EventFeed.tsx  TasteMap.tsx
apps/web/src/lib/: api.ts  auth-config.ts  auth.ts
debug/: db_inspect.py  inspect.py
infra/: litestream.yml
infra/tailscale/: README.md
scripts/: normalize_venues.py
tests/: test_api_events.py  test_scoring_match.py  test_scraper_parsers.py
worker/: pyproject.toml  worker.py
