[project]
name = "concert-finder-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "concert-finder-ingest",
    "concert-finder-scoring",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv.sources]
concert-finder-ingest = { workspace = true }
concert-finder-scoring = { workspace = true }
