[project]
name = "concert-finder-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "concert-finder-shared",
    "concert-finder-scoring",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sqlite-vec>=0.1",
    "huggingface-hub>=0.23",   # for HF Inference API explanations
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/concert_finder_api"]

[tool.uv.sources]
concert-finder-shared = { workspace = true }
concert-finder-scoring = { workspace = true }
